dialog not recieving focus

--- a/packages/fast-components/src/dialog/fixtures/dialog.html
+++ b/packages/fast-components/src/dialog/fixtures/dialog.html
@@ -1,7 +1,8 @@
 <fast-design-system-provider>
     <fast-dialog hidden>Hidden dialog with text</fast-dialog>
-    <fast-dialog id="foo" ariaLabel="Simple dialog" modal="true">
+    <fast-dialog id="foo" aria-label="Simple dialog" modal="true">
         <h2>Dialog with text and button. The button should recieve focus</h2>
-        <button>Should autofocus</button>
+        <button>Button A</button>
+        <button autofocus>Should autofocus</button>
     </fast-dialog>
 </fast-design-system-provider>
