remove custom properties for width and height

--- a/packages/fast-components/src/card/fixtures/card.html
+++ b/packages/fast-components/src/card/fixtures/card.html
@@ -1,16 +1,15 @@
 <fast-design-system-provider>
     <style>
+        fast-card {
+            height: 163px;
+            width: 300px;
+        }
+
         fast-card.custom:hover {
             --elevation: 12;
         }
     </style>
     <fast-card>Card with text</fast-card>
-    <br>
-    <fast-card style="--width: 200px">Custom width (200px)</fast-card>
-    <br>
-    <fast-card style="--height: 200px">Custom height (200px)</fast-card>
-    <br>
-    <fast-card style="--width: 300px; --height: 163px">Custom width (300px) and height (163px)</fast-card>
     <br>
     <fast-card style="--elevation: 12">Custom depth</fast-card>
     <br>
