--- a/packages/fast-components/src/dialog/fixtures/dialog.html
+++ b/packages/fast-components/src/dialog/fixtures/dialog.html
@@ -1,5 +1,5 @@
 <fast-design-system-provider>
-    <fast-dialog hidden>Hidden dialog with text</fast-dialog>
+    <!-- <fast-dialog hidden>Hidden dialog with text</fast-dialog> -->
     <fast-dialog id="foo" aria-label="Simple dialog" modal="true">
         <h2>Dialog with text and button. The button should recieve focus</h2>
         <button>Button A</button>
