update to take advantage of mutation observer

--- a/packages/fast-components/src/dialog/fixtures/dialog.html
+++ b/packages/fast-components/src/dialog/fixtures/dialog.html
@@ -3,6 +3,6 @@
     <fast-dialog id="foo" aria-label="Simple dialog" modal="true">
         <h2>Dialog with text and button. The button should recieve focus</h2>
         <button>Button A</button>
-        <button autofocus>Should autofocus</button>
+        <button id="element" autofocus>Should autofocus</button>
     </fast-dialog>
 </fast-design-system-provider>
