--- a/packages/fast-components/src/checkbox/fixtures/base.html
+++ b/packages/fast-components/src/checkbox/fixtures/base.html
@@ -1,3 +1,38 @@
-<fast-design-system-provider>
+<fast-design-system-provider style="font-family: var(--body-font)">
+    <h1>Checkbox</h1>
+    <h4>Default</h4>
     <fast-checkbox></fast-checkbox>
+    <fast-checkbox>label</fast-checkbox>
+
+    <h4>Checked</h4>
+    <fast-checkbox checked></fast-checkbox>
+
+    <!-- Required -->
+    <h4>Required</h4>
+    <fast-checkbox required></fast-checkbox>
+
+    <h4>Indeterminate</h4>
+    <fast-checkbox class="flag-indeterminate">Unchecked</fast-checkbox>
+    <fast-checkbox checked class="flag-indeterminate">Checked</fast-checkbox>
+
+    <!-- Disabled -->
+    <h4>Disabled</h1>
+    <fast-checkbox disabled></fast-checkbox>
+    <fast-checkbox disabled>label</fast-checkbox>
+
+    <h4>Inline</h4>
+    <fast-checkbox checked>Apples</fast-checkbox>
+    <fast-checkbox checked>Bananas</fast-checkbox>
+    <fast-checkbox>Honeydew</fast-checkbox>
+    <fast-checkbox checked>Oranges</fast-checkbox>
+
+    <h4>Vertical</h4>
+    <div style="display: flex; flex-direction: column; align-items: start;">
+    <fast-checkbox checked>Apples</fast-checkbox>
+    <fast-checkbox checked>Bananas</fast-checkbox>
+    <fast-checkbox>Honeydew</fast-checkbox>
+    <fast-checkbox checked>Oranges</fast-checkbox>
+    </div>
+
+    <!-- With label -->
 </fast-design-system-provider>
