--- a/packages/fast-components/src/checkbox/fixtures/base.html
+++ b/packages/fast-components/src/checkbox/fixtures/base.html
@@ -19,6 +19,9 @@
     <h4>Disabled</h1>
     <fast-checkbox disabled></fast-checkbox>
     <fast-checkbox disabled>label</fast-checkbox>
+    <fast-checkbox disabled checked>checked</fast-checkbox>
+    <fast-checkbox disabled checked class="flag-indeterminate">Indeterminate checked</fast-checkbox>
+    <fast-checkbox disabled class="flag-indeterminate">Indeterminate unchecked</fast-checkbox>
 
     <h4>Inline</h4>
     <fast-checkbox checked>Apples</fast-checkbox>
