fixing various issues

--- a/packages/fast-components/src/checkbox/fixtures/base.html
+++ b/packages/fast-components/src/checkbox/fixtures/base.html
@@ -31,11 +31,16 @@
 
     <h4>Vertical</h4>
     <div style="display: flex; flex-direction: column; align-items: start;">
-    <fast-checkbox checked>Apples</fast-checkbox>
-    <fast-checkbox checked>Bananas</fast-checkbox>
-    <fast-checkbox>Honeydew</fast-checkbox>
-    <fast-checkbox checked>Oranges</fast-checkbox>
+        <fast-checkbox checked>Apples</fast-checkbox>
+        <fast-checkbox checked>Bananas</fast-checkbox>
+        <fast-checkbox>Honeydew</fast-checkbox>
+        <fast-checkbox checked>Oranges</fast-checkbox>
     </div>
 
+
+    <h4>Visual vs audio label</h4>
+    <fast-checkbox>
+        <span aria-label="Audio label">Visible label</span>
+    </fast-checkbox>
     <!-- With label -->
 </fast-design-system-provider>
