hoist aria attributes to host

--- a/packages/fast-components/src/checkbox/fixtures/base.html
+++ b/packages/fast-components/src/checkbox/fixtures/base.html
@@ -30,12 +30,13 @@
     <fast-checkbox checked>Oranges</fast-checkbox>
 
     <h4>Vertical</h4>
-    <div style="display: flex; flex-direction: column; align-items: start;">
+    <fieldset style="display: flex; flex-direction: column; align-items: start;">
+        <legend>Fruit</legend>
         <fast-checkbox checked>Apples</fast-checkbox>
         <fast-checkbox checked>Bananas</fast-checkbox>
         <fast-checkbox>Honeydew</fast-checkbox>
         <fast-checkbox checked>Oranges</fast-checkbox>
-    </div>
+    </fieldset>
 
 
     <h4>Visual vs audio label</h4>
